--- a/public/work-jimmy-desana/index.html
+++ b/public/work-jimmy-desana/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-us">
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=64631&amp;path=livereload" data-no-instant defer></script>
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=65090&amp;path=livereload" data-no-instant defer></script>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
@@ -13,18 +13,18 @@
   
   <meta property="og:title" content="Adam Taylor O&#39;Reilly">
   <meta property="og:description" content="Adam Taylor O&#39;Reilly is a designer and developer based in Brooklyn, NY.">
-  <meta property="og:image" content="http://localhost:64631/icons/preview.png">
-  <meta property="og:url" content="http://localhost:64631/">
+  <meta property="og:image" content="http://localhost:65090/icons/preview.png">
+  <meta property="og:url" content="http://localhost:65090/">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="en_US">
   <meta property="og:site_name" content="Adam Taylor O&#39;Reilly">
-  <meta property="og:updated_time" content="2023-09-18 22:53:48 -0400 EDT">    
+  <meta property="og:updated_time" content="2024-12-08 21:00:05 -0500 EST">    
 
   <link rel="icon" href="/icons/favicon.ico" sizes="64x64" type="image/x-icon"><link rel="icon" href="/icons/favicon.svg" type="image/svg+xml"><link rel="apple-touch-icon" href="/icons/touch.png">
 
   
-  <link rel="canonical" href="http://localhost:64631/work-jimmy-desana/" />
-  <link rel="alternate" href="http://localhost:64631/work-jimmy-desana/" hreflang="en-us" />
+  <link rel="canonical" href="http://localhost:65090/work-jimmy-desana/" />
+  <link rel="alternate" href="http://localhost:65090/work-jimmy-desana/" hreflang="en-us" />
 
   
   <link rel="preload" href="/fonts/oror/OrorMono-Round-Regular.woff" as="font" type="font/woff" crossorigin>
@@ -72,7 +72,7 @@
 	
 
 	
-	<div>Update: 2023-09-18</div>
+	<div>Update: 2024-12-08</div>
 
 	
 	<div class="flex">
