--- a/public/work-partner-clock/index.html
+++ b/public/work-partner-clock/index.html
@@ -18,7 +18,7 @@
   <meta property="og:type" content="website">
   <meta property="og:locale" content="en_US">
   <meta property="og:site_name" content="Adam Taylor O&#39;Reilly">
-  <meta property="og:updated_time" content="2023-10-07 14:15:22 -0400 EDT">    
+  <meta property="og:updated_time" content="2024-12-08 22:58:27 -0500 EST">    
 
   <link rel="icon" href="/icons/favicon.ico" sizes="64x64" type="image/x-icon"><link rel="icon" href="/icons/favicon.svg" type="image/svg+xml"><link rel="apple-touch-icon" href="/icons/touch.png">
 
@@ -36,10 +36,9 @@
   
   
   
-  <link href="/scss/main.min.32e6b24cc046b3e655c14b797164314b9b50c16e77848c378e329bfbfb9bbaad3ed415934642c51bbf0493f0f6b1429c66eeffd1f1f9fc9e1d00cfba736effd1.css" rel="stylesheet">
+  <link href="/scss/main.min.2f77c2b9539038f74988c23dd61c86096d4e1e395af6bd4385268d6796ae7f9980992fc29027910849e750c91246773f866720973738244045ffc5098645de2a.css" rel="stylesheet">
 
-  
-<script type="module" src="/js/bundle.min.e6d2dee7441b2eff72f1a6bd1ea80bf0b938de15cb9b35ec090bfbab11f0105f77b73fccb0e68b376f9d6904a00bae318551d8155aabaebaaa4f4f33d04bd922.js" crossorigin="anonymous"></script>
+  <script type="module" src="/js/bundle.min.6465ada7bc0d0309e35aef3f6265e867033f01f9fd8c47f014b21ef83a28d0b46d7d4dabe723f3fc619e2d1e0a0afc75c4622b78e0a3f972ef98ee1c8e3d9e3e.js" crossorigin="anonymous"></script>
 
 
   
@@ -73,7 +72,7 @@
 </content>
 
 	
-	<div>Update: 2023-10-07</div>
+	<div>Update: 2024-12-08</div>
 
 	
 	<div class="flex">
