--- a/public/projects/arch-art-books-storefront/index.html
+++ b/public/projects/arch-art-books-storefront/index.html
@@ -107,7 +107,7 @@
   <meta property="og:type" content="website">
   <meta property="og:locale" content="en_US">
   <meta property="og:site_name" content="Adam Taylor O&#39;Reilly">
-  <meta property="og:updated_time" content="0001-01-01 00:00:00 &#43;0000 UTC">    
+  <meta property="og:updated_time" content="2024-12-09 17:21:48 -0500 EST">    
 
   
   
@@ -142,7 +142,7 @@
 </content>
 
 	
-	
+	<div>Update: 2024-12-09</div>
 
 	
 	<div class="flex">
@@ -171,11 +171,8 @@
     
     Typeface (Oror Mono Round) and programming by Adam Taylor O&rsquo;Reilly. This website was built with <a href="https://gohugo.io/">Hugo</a>, <a href="https://decapcms.org/">Decap</a>, and is hosted on <a href="https://github.com/adamoadamo/adamo-portfolio">Github Pages</a>.
 <br>
-© 2024
- Adam Taylor O&rsquo;Reilly, Brooklyn NY
-<br>
 ⁕ 
-Last updated on December 8, 2024
+Last updated on December 9, 2024
     </div>
 </div>    </footer>
 	</div>
