--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -6,6 +6,15 @@
     <title>Content Manager</title>
   </head>
   <body>
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <script src="https://unpkg.com/decap-cms@3.1.3/dist/decap-cms.js"></script>
+    <script>
+      // Add debugging
+      console.log('Admin page loaded');
+      
+      // Log config when loaded
+      window.CMS.getBackend().then(backend => {
+        console.log('Backend config:', backend.options);
+      });
+    </script>
   </body>
 </html>
