--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -6,6 +6,9 @@
     <title>Content Manager</title>
   </head>
   <body>
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+    <script src="https://unpkg.com/@staticcms/core@%5E3.4.5/dist/static-cms-core.js"></script>
+    <script>
+      window.CMS.init();
+    </script>
   </body>
 </html>
