--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -6,9 +6,6 @@
     <title>Content Manager</title>
   </head>
   <body>
-    <script src="https://unpkg.com/@staticcms/core@%5E3.4.5/dist/static-cms-core.js"></script>
-    <script>
-      window.CMS.init();
-    </script>
+    <script src="https://unpkg.com/decap-cms@^3.1.3/dist/decap-cms.js"></script>
   </body>
 </html>
