--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -4,58 +4,48 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Content Manager</title>
-    <!-- Add authentication endpoint configuration -->
-    <script>
-      window.CMS_MANUAL_INIT = true;
-    </script>
   </head>
   <body>
     <div id="nc-root"></div>
-    <!-- Disable Cloudflare Rocket Loader for this script -->
-    <script data-cfasync="false" src="https://unpkg.com/decap-cms@^3.1.3/dist/decap-cms.js"></script>
+    <!-- Load React first -->
+    <script src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
+    <!-- Then load Decap CMS -->
+    <script src="https://unpkg.com/decap-cms@^3.1.3/dist/decap-cms.js"></script>
     <script>
-      console.log('Admin page loaded');
-      
-      // Configure CMS
-      const config = {
-        load_config_file: true,
-        backend: {
-          name: 'github',
-          repo: 'adamoadamo/adamo-portfolio',
-          branch: 'master',
-          base_url: 'https://api.decapcms.org'
-        },
-        media_folder: "content/projects/{{dirname}}",
-        public_folder: ".",
-        site_url: "https://adamtoreilly.info",
-        display_url: "https://adamtoreilly.info",
-        publish_mode: "simple"
-      };
+      // Wait for all resources to load
+      window.addEventListener('load', function() {
+        // Initialize the CMS
+        const config = {
+          backend: {
+            name: 'github',
+            repo: 'adamoadamo/adamo-portfolio',
+            branch: 'master',
+            base_url: 'https://api.decapcms.org'
+          },
+          local_backend: false,
+          load_config_file: true,
+          media_folder: "content/projects/{{dirname}}",
+          public_folder: ".",
+          site_url: "https://adamtoreilly.info",
+          display_url: "https://adamtoreilly.info",
+          publish_mode: "simple"
+        };
 
-      // Wait for CMS to be available
-      function initCMS() {
-        console.log('Initializing CMS');
+        // Make sure the root element exists
+        const root = document.getElementById('nc-root');
+        if (!root) {
+          console.error('Root element not found');
+          return;
+        }
+
         try {
-          // Make sure the root element exists
-          const root = document.getElementById('nc-root');
-          if (!root) {
-            console.error('Root element not found');
-            return;
-          }
-
           window.CMS.init({ config });
           console.log('CMS initialized successfully');
         } catch (error) {
           console.error('Error initializing CMS:', error);
         }
-      }
-
-      // Wait for DOM to be ready
-      if (document.readyState === 'loading') {
-        document.addEventListener('DOMContentLoaded', initCMS);
-      } else {
-        initCMS();
-      }
+      });
     </script>
   </body>
 </html>
