--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -6,46 +6,8 @@
     <title>Content Manager</title>
   </head>
   <body>
+    <!-- The CMS will mount here -->
     <div id="nc-root"></div>
-    <!-- Load React first -->
-    <script src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
-    <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
-    <!-- Then load Decap CMS -->
     <script src="https://unpkg.com/decap-cms@^3.1.3/dist/decap-cms.js"></script>
-    <script>
-      // Wait for all resources to load
-      window.addEventListener('load', function() {
-        // Initialize the CMS
-        const config = {
-          backend: {
-            name: 'github',
-            repo: 'adamoadamo/adamo-portfolio',
-            branch: 'master',
-            base_url: 'https://api.decapcms.org'
-          },
-          local_backend: false,
-          load_config_file: true,
-          media_folder: "content/projects/{{dirname}}",
-          public_folder: ".",
-          site_url: "https://adamtoreilly.info",
-          display_url: "https://adamtoreilly.info",
-          publish_mode: "simple"
-        };
-
-        // Make sure the root element exists
-        const root = document.getElementById('nc-root');
-        if (!root) {
-          console.error('Root element not found');
-          return;
-        }
-
-        try {
-          window.CMS.init({ config });
-          console.log('CMS initialized successfully');
-        } catch (error) {
-          console.error('Error initializing CMS:', error);
-        }
-      });
-    </script>
   </body>
 </html>
